==> LucasEtchezuri/Arduino-ADS131M04/src/ADS131M0x.cpp <==
#include "Arduino.h"
#include "ADS131M0x.h"
#include "SPI.h"
#define DO_PRAGMA(x) _Pragma (#x)
#define INFO(x) DO_PRAGMA(message ("\nREMARK: " #x))

uint8_t ADS131M0x::writeRegister(uint8_t address, uint16_t value)
{
  uint16_t res;
  uint8_t addressRcv;
  uint8_t bytesRcv;
  uint16_t cmd = 0;

  digitalWrite(csPin, LOW);
  delayMicroseconds(1);

  cmd = (CMD_WRITE_REG) | (address << 7) | 0;

  //res = spiPort->transfer16(cmd);
  spiPort->transfer16(cmd);
  spiPort->transfer(0x00);

  spiPort->transfer16(value);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif

  res = spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif
  delayMicroseconds(1);
  digitalWrite(csPin, HIGH);

  addressRcv = (res & REGMASK_CMD_READ_REG_ADDRESS) >> 7;
  bytesRcv = (res & REGMASK_CMD_READ_REG_BYTES);

  if (addressRcv == address)
  {
    return bytesRcv + 1;
  }
  return 0;
}

uint16_t ADS131M0x::readRegister(uint8_t address)
{
  uint16_t cmd;
  uint16_t data;

  cmd = CMD_READ_REG | (address << 7 | 0);

  digitalWrite(csPin, LOW);
  delayMicroseconds(1);

  spiPort->transfer16(cmd);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif
  data = spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif
  delayMicroseconds(1);
  digitalWrite(csPin, HIGH);
  return data;
}

void ADS131M0x::reset(uint8_t reset_pin)
{
  pinMode(reset_pin, OUTPUT);
  digitalWrite(reset_pin, HIGH);
  delay(100);
  digitalWrite(reset_pin, LOW);
  delay(100);
  digitalWrite(reset_pin, HIGH);
  delay(1);
}

void ADS131M0x::begin(SPIClass *port, uint8_t clk_pin, uint8_t miso_pin, uint8_t mosi_pin, uint8_t cs_pin, uint8_t drdy_pin)
{
  // Set pins up
  csPin = cs_pin;
  drdyPin = drdy_pin;
  spiPort = port;
  
  spiPort->begin(clk_pin, miso_pin, mosi_pin, cs_pin); // SCLK, MISO, MOSI, SS
  SPISettings settings(spiClockSpeed, SPI_MSBFIRST, SPI_MODE1);
  spiPort->beginTransaction(settings);
  delay(1);
  
  pinMode(csPin, OUTPUT);
  digitalWrite(csPin,HIGH); // CS HIGH --> not selected
  pinMode(drdyPin, INPUT);  // DRDY Input
}

bool ADS131M0x::isDataReady()
{
  if (digitalRead(drdyPin) == HIGH)
  {
    return false;
  }
  return true;
}

int32_t ADS131M0x::readfastCh0(void)
{
  uint8_t x = 0;
  uint8_t x2 = 0;
  uint8_t x3 = 0;
  int32_t aux;
  adcOutput res;

  digitalWrite(csPin, LOW);
  //NOP();
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  res.status = ((x << 8) | x2);

  // read CH0 --------
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    val32Ch0 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    val32Ch0 = aux;
  }
  
  spiPort->write16(0x00);
  spiPort->write(0x00);

  spiPort->write16(0x00);
  spiPort->write(0x00);

  spiPort->write16(0x00);
  spiPort->write(0x00);
  
  /* slower
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  */

  //delay(1);
  //NOP();
  digitalWrite(csPin, HIGH);

  return val32Ch0;
}

adcOutput ADS131M0x::readADC(void)
{
  uint8_t x = 0;
  uint8_t x2 = 0;
  uint8_t x3 = 0;
  int32_t aux;
  adcOutput res;

  digitalWrite(csPin, LOW);
#ifndef NO_CS_DELAY
  delayMicroseconds(1);
#endif
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  res.status = ((x << 8) | x2);

  // read CH0 --------
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch0 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch0 = aux;
  }

  // faster!!!
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  // read CH1 --------
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch1 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch1 = aux;
  }
  
#ifndef IS_M02
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch2 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch2 = aux;
  }

  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch3 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch3 = aux;
  }
#endif

  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
#ifndef NO_CS_DELAY
  delayMicroseconds(1);
#endif
  digitalWrite(csPin, HIGH);
  return res;
}
