==> liwing1/ADS131M0x/components/ADS131M0x/ADS131M0x.cpp <==
#include "ADS131M0x.h"
#include "freertos/task.h"
#include <rom/ets_sys.h>
#include "driver/gpio.h"
#define DO_PRAGMA(x) _Pragma (#x)
#define INFO(x) DO_PRAGMA(message ("\nREMARK: " #x))
#define HIGH  1
#define LOW   0

uint8_t ADS131M0x::writeRegister(uint8_t address, uint16_t value)
{
  uint16_t res;
  uint8_t addressRcv;
  uint8_t bytesRcv;
  uint16_t cmd = 0;

  gpio_set_level(csPin, LOW);
  ets_delay_us(1);

  cmd = (CMD_WRITE_REG) | (address << 7) | 0;

  //res = spiPort->transfer16(cmd);
  spiPort->transfer16(cmd);
  spiPort->transfer(0x00);

  spiPort->transfer16(value);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif

  res = spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif
  ets_delay_us(1);
  gpio_set_level(csPin, HIGH);

  addressRcv = (res & REGMASK_CMD_READ_REG_ADDRESS) >> 7;
  bytesRcv = (res & REGMASK_CMD_READ_REG_BYTES);

  if (addressRcv == address)
  {
    return bytesRcv + 1;
  }
  return 0;
}

uint16_t ADS131M0x::readRegister(uint8_t address)
{
  uint16_t cmd;
  uint16_t data;

  cmd = CMD_READ_REG | (address << 7 | 0);

  gpio_set_level(csPin, LOW);
  ets_delay_us(1);

  spiPort->transfer16(cmd);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif
  data = spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#ifndef IS_M02
  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);

  spiPort->transfer16(0x0000);
  spiPort->transfer(0x00);
#endif
  ets_delay_us(1);
  gpio_set_level(csPin, HIGH);
  return data;
}

void ADS131M0x::reset(gpio_num_t reset_pin)
{
  gpio_config_t gpio_conf = {
    .pin_bit_mask = 1ULL<<reset_pin,
    .mode = GPIO_MODE_OUTPUT,
    .pull_up_en = GPIO_PULLUP_DISABLE,
    .pull_down_en = GPIO_PULLDOWN_DISABLE,
    .intr_type = GPIO_INTR_DISABLE
  };
  gpio_config(&gpio_conf);
  
  gpio_set_level(reset_pin, HIGH);
  vTaskDelay(100);
  gpio_set_level(reset_pin, LOW);
  vTaskDelay(100);
  gpio_set_level(reset_pin, HIGH);
  vTaskDelay(100);
}

void ADS131M0x::begin(SPIClass *port, gpio_num_t clk_pin, gpio_num_t miso_pin, gpio_num_t mosi_pin, gpio_num_t cs_pin, gpio_num_t drdy_pin)
{
  // Set pins up
  csPin = cs_pin;
  drdyPin = drdy_pin;
  spiPort = port;
  
  spiPort->begin(clk_pin, miso_pin, mosi_pin, cs_pin); // SCLK, MISO, MOSI, SS
  SPISettings settings(spiClockSpeed, SPI_MSBFIRST, SPI_MODE1);
  spiPort->beginTransaction(settings);
  vTaskDelay(pdMS_TO_TICKS(1));
  
  // pinMode(csPin, OUTPUT);
  // gpio_set_level(csPin,HIGH); // CS HIGH --> not selected
  gpio_config_t gpio_conf = {
    .pin_bit_mask = 1ULL<<cs_pin,
    .mode = GPIO_MODE_OUTPUT,
    .pull_up_en = GPIO_PULLUP_DISABLE,
    .pull_down_en = GPIO_PULLDOWN_DISABLE,
    .intr_type = GPIO_INTR_DISABLE
  };
  gpio_config(&gpio_conf);
  gpio_set_level(cs_pin, 1);

  // pinMode(drdyPin, INPUT);  // DRDY Input
  gpio_conf.pin_bit_mask = 1ULL<<drdy_pin;
  gpio_conf.mode = GPIO_MODE_INPUT;
  gpio_config(&gpio_conf);

}

bool ADS131M0x::isDataReady()
{
  if (gpio_get_level(drdyPin) == HIGH)
  {
    return false;
  }
  return true;
}

int32_t ADS131M0x::readfastCh0(void)
{
  uint8_t x = 0;
  uint8_t x2 = 0;
  uint8_t x3 = 0;
  int32_t aux;
  adcOutput res;

  gpio_set_level(csPin, LOW);
  //NOP();
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  res.status = ((x << 8) | x2);

  // read CH0 --------
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    val32Ch0 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    val32Ch0 = aux;
  }
  
  spiPort->write16(0x00);
  spiPort->write(0x00);

  spiPort->write16(0x00);
  spiPort->write(0x00);

  spiPort->write16(0x00);
  spiPort->write(0x00);
  
  /* slower
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  */

  //delay(1);
  //NOP();
  gpio_set_level(csPin, HIGH);

  return val32Ch0;
}

adcOutput ADS131M0x::readADC(void)
{
  uint8_t x = 0;
  uint8_t x2 = 0;
  uint8_t x3 = 0;
  int32_t aux;
  adcOutput res;

  gpio_set_level(csPin, LOW);
#ifndef NO_CS_DELAY
  ets_delay_us(1);
#endif
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  spiPort->transfer(0x00);

  res.status = ((x << 8) | x2);

  // read CH0 --------
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch0 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch0 = aux;
  }

  // faster!!!
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  // read CH1 --------
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch1 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch1 = aux;
  }
  
#ifndef IS_M02
  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch2 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch2 = aux;
  }

  x = spiPort->transfer(0x00);
  x2 = spiPort->transfer(0x00);
  x3 = spiPort->transfer(0x00);
  aux = (((x << 16) | (x2 << 8) | x3) & 0x00FFFFFF);
  if (aux > 0x7FFFFF)
  {
    res.ch3 = ((~(aux)&0x00FFFFFF) + 1) * -1;
  }
  else
  {
    res.ch3 = aux;
  }
#endif

  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
  spiPort->transfer(0x00);
#ifndef NO_CS_DELAY
  ets_delay_us(1);
#endif
  gpio_set_level(csPin, HIGH);
  return res;
}
